objects/SVMX_PS_ES_Org_Wide_Address_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will store all org wide addresses per record type required for emailing the service report</description>
    <label>Email Org Wide Address Settings</label>
    <fields>
        <fullName>SVMX_PS_ES_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field defines if the Org Wide Address is default and can be used for any object for which no org wide address is found</description>
        <inlineHelpText>This field defines if the Org Wide Address is default and can be used for any object for which no org wide address is found</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_ES_Object_API_Name__c</fullName>
        <description>This field carries the Object API Name</description>
        <inlineHelpText>This field carries the Object API Name</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_ES_Org_Wide_Address__c</fullName>
        <description>This field carries the org wide address id</description>
        <inlineHelpText>This field carries the org wide address id</inlineHelpText>
        <label>Org Wide Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_ES_Record_Type_Name__c</fullName>
        <description>This field carries the name of record type.</description>
        <inlineHelpText>This field carries the name of record type.</inlineHelpText>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>